--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -23,3 +23,8 @@ blocks:
         - name: 'Job #1'
           commands:
             - npm build
+promotions:
+  - name: Promotion 1
+    pipeline_file: pipeline_2.yml
+    auto_promote:
+      when: branch = 'master' AND result = 'passed'
