--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -27,4 +27,4 @@ promotions:
   - name: Promotion 1
     pipeline_file: pipeline_2.yml
     auto_promote:
-      when: branch = 'master' AND result = 'passed'
+      when: branch = 'staging'
